--- a/openapi-generator-utils/treepots/treepots-openapigen-html/index.html
+++ b/openapi-generator-utils/treepots/treepots-openapigen-html/index.html
@@ -194,7 +194,7 @@ font-style: italic;
 
   <h3>Table of Contents </h3>
   <div class="method-summary"></div>
-  <h4><a href="#Default">Default</a></h4>
+  <h4><a href="#Lorem">Lorem</a></h4>
   <ul>
   <li><a href="#getCase1"><code><span class="http-method">get</span> /case1</code></a></li>
   <li><a href="#issue7754"><code><span class="http-method">get</span> /issue7754</code></a></li>
@@ -202,7 +202,7 @@ font-style: italic;
   <li><a href="#pull66"><code><span class="http-method">get</span> /pull66</code></a></li>
   </ul>
 
-  <h1><a name="Default">Default</a></h1>
+  <h1><a name="Lorem">Lorem</a></h1>
   <div class="method"><a name="getCase1"/>
     <div class="method-path">
     <a class="up" href="#__Methods">Up</a>
