--- a/openapi-generator-utils/treepots/treepots-openapigen-html/index.html
+++ b/openapi-generator-utils/treepots/treepots-openapigen-html/index.html
@@ -359,7 +359,10 @@ font-style: italic;
 
     <h3 class="field-label">Example data</h3>
     <div class="example-data-content-type">Content-Type: application/json</div>
-    <pre class="example"><code>{ }</code></pre>
+    <pre class="example"><code>{
+  "IProp" : 0,
+  "LProp" : 6
+}</code></pre>
 
     <h3 class="field-label">Produces</h3>
     This API call produces the following media types according to the <span class="header">Accept</span> request header;
@@ -418,7 +421,9 @@ font-style: italic;
   <ol>
     <li><a href="#EnumInArrayOfArray"><code>EnumInArrayOfArray</code> - </a></li>
     <li><a href="#ErrorModel"><code>ErrorModel</code> - </a></li>
+    <li><a href="#IntEnum"><code>IntEnum</code> - </a></li>
     <li><a href="#ItemWithBoolean"><code>ItemWithBoolean</code> - </a></li>
+    <li><a href="#LongEnum"><code>LongEnum</code> - </a></li>
     <li><a href="#LongModel"><code>LongModel</code> - </a></li>
     <li><a href="#ObjWithEnums"><code>ObjWithEnums</code> - </a></li>
     <li><a href="#SomeObject"><code>SomeObject</code> - </a></li>
@@ -450,6 +455,12 @@ font-style: italic;
     </div>  <!-- field-items -->
   </div>
   <div class="model">
+    <h3><a name="IntEnum"><code>IntEnum</code> - </a> <a class="up" href="#__Models">Up</a></h3>
+    <div class='model-description'></div>
+    <div class="field-items">
+          </div>  <!-- field-items -->
+  </div>
+  <div class="model">
     <h3><a name="ItemWithBoolean"><code>ItemWithBoolean</code> - </a> <a class="up" href="#__Models">Up</a></h3>
     <div class='model-description'></div>
     <div class="field-items">
@@ -457,6 +468,12 @@ font-style: italic;
 <div class="param">active (optional)</div><div class="param-desc"><span class="param-type"><a href="#boolean">Boolean</a></span>  </div>
 <div class="param">name (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span>  </div>
     </div>  <!-- field-items -->
+  </div>
+  <div class="model">
+    <h3><a name="LongEnum"><code>LongEnum</code> - </a> <a class="up" href="#__Models">Up</a></h3>
+    <div class='model-description'></div>
+    <div class="field-items">
+          </div>  <!-- field-items -->
   </div>
   <div class="model">
     <h3><a name="LongModel"><code>LongModel</code> - </a> <a class="up" href="#__Models">Up</a></h3>
@@ -470,7 +487,13 @@ font-style: italic;
     <h3><a name="ObjWithEnums"><code>ObjWithEnums</code> - </a> <a class="up" href="#__Models">Up</a></h3>
     <div class='model-description'></div>
     <div class="field-items">
-      <div class="param">SProp (optional)</div><div class="param-desc"><span class="param-type"><a href="#StringEnum">StringEnum</a></span>  </div>
+      <div class="param">IProp (optional)</div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span>  format: int32</div>
+        <div class="param-enum-header">Enum:</div>
+        <div class="param-enum">1</div><div class="param-enum">2</div><div class="param-enum">3</div>
+<div class="param">LProp (optional)</div><div class="param-desc"><span class="param-type"><a href="#long">Long</a></span>  format: int64</div>
+        <div class="param-enum-header">Enum:</div>
+        <div class="param-enum">20</div><div class="param-enum">30</div><div class="param-enum">40</div>
+<div class="param">SProp (optional)</div><div class="param-desc"><span class="param-type"><a href="#StringEnum">StringEnum</a></span>  </div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
